challenge010b/assets/styles/app.css
@charset "UTF-8";
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');

@font-face {
    font-family: 'Android';
    src: url(/assets/fonts/idroid.otf) format('opentype');
    font-weight: normal;
}

:root {
    --color0: #fff;
    --color1: #c5ebd6;
    --color2: #83e1ad;
    --color3: #3ddc84;
    --color4: #2fa866;
    --color5: #1a5c37;
    --color6: #063d1e;
    --color7: #000;

    --default-font: Arial, Verdana, Helvetica, sans-serif;
    --featured-font: 'Bebas Neue', cursive, Arial, Verdana, Helvetica, sans-serif;
    --android-font: 'Android', cursive, Arial, Verdana, Helvetica, sans-serif;
}

* {
    margin: 0rem;
    padding: 0rem;
}

body {
    background-color: var(--color1);
    font-family: var(--default-font);
}

a.externo::after {
    content: '\00A0\1F517';
}

header {
    background-image: linear-gradient(to bottom, var(--color4), var(--color6) );
    min-height: 150px;
    text-align: center;
    padding-top: 40px;
}

header>h1 {
    color: var(--color0);
    font-family: var(--featured-font);
    margin-bottom: 20px;
    font-size: 3em;
    font-weight: normal;
    text-shadow: 9px 4px 14px rgba(0, 0, 0, 0.639);
}

header>p {
    color: var(--color0);
    font-family: var(--default-font);
    font-size: 1.2em;
    max-width: 500px;
    margin: auto;
    margin-bottom: 20px;
    padding-right: 10px;
    padding-left: 10px;
    text-shadow: 9px 4px 14px rgba(0, 0, 0, 0.684);
}

nav {
    background-color: var(--color6);
    padding: 10px;
    box-shadow: 0px 10px 15px 7px rgb(0 0 0 / 64%);

}

nav > a {
    color: var(--color2);
    padding: 10px;
    text-decoration: none;
    font-weight: bold;
    border-radius: 5px;
    transition-duration: 300ms;
}

nav > a:hover {
    background-color: var(--color3);
    color: var(--color5); 
}



main {
    min-width: 300px;
    max-width: 1000px;
    margin: auto;
    padding: 20px;
    background-color: var(--color0);
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.500);
    margin-bottom: 30px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

main p {
    text-indent: 30px;
    margin: 15px 0px;
    text-align: justify;
    line-height: 1.8em;
    font-size: 1em;
}

main strong {
    color: var(--color6);
    font-weight: bold;
}

main a {
    padding: 2px 3px;
    background-color: var(--color1);
    color: #063d1e;
    text-decoration: none;
    font-weight: bold;
}

main a:hover {
    text-decoration: underline;
}

main h1 {
    color: var(--color6);
    font-family: var(--android-font);
    font-weight: normal;
    font-size: 1.8em;
}

main h2 {
    font-family: var(--android-font);
    color: var(--color5);
    font-size: 1.3em;
    font-weight: normal;
    background-image: linear-gradient(to right, var(--color2), transparent);
    text-indent: 8px;
}

main img {
    width: 100%;
}

main img.pequeno {
    max-width: 350px;
    display: block;
    margin: auto;
}

div.video {
    background-color: var(--color6);
    margin: 0px -20px 30px -20px;
    padding: 20px;
    padding-bottom: 56.5%;
    position: relative;
}

div.video > iframe {
    position: absolute;
    top: 20px;
    left: 50px;
    width: 90%;
    height: 90%;
}

aside {
    background-color: var(--color2);
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.382);

}

aside h3 {
    background-color: var(--color5);
    color: var(--color0);
    padding: 5px;
    margin: -10px -10px 0px -10px; 
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

aside ul {
    list-style-position: inside;
    columns: 2;
    list-style-type: '\2714\00A0';
}

footer {
    background-color: var(--color6);
    color: var(--color0);
    text-align: center;
    font-size: 0.8em;
    padding: 5px;
}

footer a {
    color: var(--color0);
    font-weight: bolder;
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
    color: var(--color2);
}

